Fix broken style of download button

--- a/contents/assets/stylesheets/styles.scss
+++ b/contents/assets/stylesheets/styles.scss
@@ -109,19 +109,29 @@ img.screenshot {
 
 .download {
 	background: linear-gradient(to top, rgb(242, 145, 25), rgb(242, 176, 96));
-	color: #FFF;
-	border-radius: 4px;
 	border: 1px solid rgb(247, 153, 0);
+	border-radius: 4px;
 	box-shadow: 1px 1px 1px rgba(000,000,000,0.3),inset 0px 0px 3px rgba(255,255,255,0.5);
-	box-shadow: 1px 1px 1px rgba(000,000,000,0.3),inset 0px 0px 3px rgba(255,255,255,0.5);
-	text-shadow: 0px 0px 3px rgba(0,0,0,0.5);
 	padding: 10px;
+
+	font-size: $font-size-large;
+	color: #FFF;
+	text-shadow: 0px 0px 3px rgba(0,0,0,0.5);
+
+	&:hover {
+		color: #FCE8CD;
+		text-decoration: none;
+	}
+
+	line-height: 4em;
+	margin-left: 10px;
 }
 
 .download-top {
 	font-size: 250%;
 	float: right;
 	border-radius: 8px;
+	line-height: 1.5em;
 }
 
 .shellline { 
